# pkgman_triggers.py

./: ReadMe.md  pyproject.toml
pkgman_triggers/: AuthDB.py  __init__.py  __main__.py  gui.py  triggers.py
test/: pyproject.toml
