[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgman_triggers"
authors = [{name = "KOLANICH"}]
description = "A lib for convenient and pythonic use of package manager hooks."
readme = "ReadMe.md"
keywords = ["python", "building", "CI", "bleeding edge"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/File2Package/pkgman_triggers.py"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
include = [
	"pkgman_triggers",
	"pkgman_triggers.*",
]
namespaces = false

[tool.setuptools_scm]
